# geomanager

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  boot_django.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
geomanager/: MANIFEST.in  admin.py  apps.py  blocks.py  constants.py  errors.py  fields.py  helpers.py  panels.py  settings.py  urls.py  validators.py  wagtail_hooks.py  widgets.py
geomanager/admin/: __init__.py  base.py  boundary.py  category.py  dataset.py  metadata.py  raster_file.py  raster_tile.py  vector_file.py  vector_tile.py  wms.py
geomanager/forms/: aoi.py  boundary.py  geomanager_user_profile.py  raster_file.py  raster_style.py  vector_file.py
geomanager/migrations/: 0001_initial.py  0001_squashed_0024_rastertilelayer_get_time_from_tile_json_and_more.py  0002_geomanagersettings_logo_and_more.py  0003_alter_colorvalue_label_alter_colorvalue_threshold_and_more.py  0004_alter_dataset_can_clip.py  0005_delete_countryboundary_and_more.py  0006_stationsettings.py  0007_remove_stationsettings_id_field_and_more.py  0008_stationsettings_name_column.py  0009_stationsettings_popup_props.py  0010_remove_stationsettings_popup_props.py  0011_vectorlayericon.py  0012_geomanagersettings_crop_raster_to_country.py  0013_geomanagersettings_logo_external_link_and_more.py  0014_geomanagersettings_privacy_policy_page_and_more.py  0015_wmslayer_request_time_from_capabilities.py  0016_wmslayer_date_format.py  0017_wmslayer_more_info_alter_wmslayer_date_format.py  0018_wmslayer_custom_get_capabilities_url.py  0019_wmslayer_get_capabilities_layer_name_and_more.py  0020_tmslayer.py  0021_rasterfilelayer_rastertilelayer_vectorfilelayer_and_more.py  0022_alter_rastertilelayer_options_and_more.py  0023_vectortilelayericon.py  0024_rastertilelayer_get_time_from_tile_json_and_more.py  0025_alter_areaofinterest_options_alter_category_options_and_more.py  0026_layerrasterfile_raster_metadata_and_more.py  0027_alter_layerrasterfile_options_and_more.py  0028_alter_pgvectortable_options_alter_dataset_category.py  0029_rasterfilelayer_auto_ingest_from_directory.py  0030_delete_stationsettings.py  0031_remove_geomanagersettings_cap_auto_refresh_interval_and_more.py  0032_rasterfilelayer_auto_ingest_nc_data_variable.py  0033_alter_layerrasterfile_file_and_more.py  0034_rastertilelayer_time_parameter_name_and_more.py  0035_vectortilelayer_render_layers_json_and_more.py  0036_vectortilelayer_popup_config_and_more.py  0037_dataset_enable_all_multi_layers_on_add.py  0038_rasterfilelayer_legend_and_more.py  0039_rasterfilelayer_order_rastertilelayer_order_and_more.py  (+19 more)
geomanager/models/: aoi.py  boundary.py  core.py  geomanager_settings.py  geostore.py  raster_file.py  raster_style.py  tile_base.py  tile_gl.py  vector_file.py  vector_tile.py  wms.py
geomanager/samples/basemaps/: basemaps.json  (+1 more)
geomanager/serializers/: __init__.py  aoi.py  auth.py  core.py  geostore.py  profile.py  raster_file.py  raster_tile.py  vector_file.py  vector_tile.py  wms.py
geomanager/utils/: __init__.py  boundary.py  ingest.py  magics.py  raster_utils.py  svg.py  tile_gl.py  tiles.py  timestamps.py  vector_utils.py
geomanager/views/: __init__.py  auth.py  boundary.py  core.py  nextjs.py  profile.py  raster_file.py  raster_tile.py  tile_gl.py  vector_file.py  vector_tile.py  wms.py
geomanager/viewsets/: core.py  raster.py  vector.py
sandbox/: requirements.txt
sandbox/home/: forms.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
sandbox/sandbox/: urls.py
(+57 files in other folders)
