[project]
version = "0.6.6"
name = "geomanager"
requires-python = ">=3.11, <3.13"
license = "CC-BY-4.0"
authors = [
    { name = "Jason Kinyua", email = "jaysnmury@gmail.com" },
    { name = "ICPAC Developers", email = "developer@icapc.net" },
]
readme = "README.md"
dependencies = [
    "adm-boundary-manager>=0.2.5",
    "cairosvg>=2.8.2",
    "cftime>=1.6.4.post1",
    "django==4.2.16",
    "django-allauth>=65.11.2",
    "django-environ>=0.12.0",
    "django-extensions>=3.2.1",
    "django-filter>=24.3",
    "django-json-widget>=2.0.3",
    "django-large-image>=0.10.1",
    "django-nextjs>=3.3.0",
    "djangorestframework-simplejwt>=5.5.1",
    "large-image-source-pil>=1.33.2",
    "large-image-source-rasterio>=1.33.2",
    "matplotlib>=3.10.6",
    "mercantile>=1.2.1",
    "netcdf4>=1.7.2",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "rasterio>=1.4.3",
    "rio-cogeo>=5.4.2",
    "rioxarray>=0.19.0",
    "ruff>=0.13.3",
    "shapely>=2.1.2",
    "wagtail==6.3.2",
    "wagtail-adminsortable>=0.1",
    "wagtail-cache>=3.0.0",
    "wagtail-color-panel>=1.4.1",
    "wagtail-font-awesome-svg>=2.0",
    "wagtail-humanitarian-icons>=2.0.0",
    "wagtail-icon-chooser>=0.3.1",
    "wagtail-modeladmin>=2.1.0",
    "xarray>=2025.9.1",
]


[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "F", "Q"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405"]
"production.py" = ["F403", "F405"]
"dev.py" = ["F403", "F405"]
"*.py" = ["B904"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
