[metadata]
name = geomanager
version = 0.6.6
description = Wagtail based Geospatial Data Manager
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/icpac-igad/geomanager/
author = ICPAC
author_email = developer@icpac.net
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
